--- a/src/main/resources/css/vocera-theme.css
+++ b/src/main/resources/css/vocera-theme.css
@@ -250,8 +250,8 @@
 }
 
 .sidebar-collapsed .nav-button:hover {
-    -fx-text-fill: #000000;
-    -fx-background-color: #F5F5F5;
+    -fx-text-fill: #00979D;
+    -fx-background-color: #3A3A3A;
 }
 
 .sidebar-collapsed Label {
